<resources>
    <string name="app_name">Allowance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="kid_card_image_description">Image of Kid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_menu_add_kid">Add Kid</string>
    <string name="fab_menu_add_money">Add Money</string>
    <string name="add_image">Add a new image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="button_done">Done</string>
    <string name="date_picker_title">Select Date</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_spending_balance">Spend Money</string>
    <string name="label_savings_balance">Savings</string>
    <string name="initial_balances">Initial Balances</string>
    <string name="add_kid">Add Kid</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="transaction_kid_group_label">Add transaction for</string>
</resources>
