<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
            type="net.bradball.allowance.ui.editKid.EditKidViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_kid_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editKid.EditKidFragment">

        <ImageView
            android:id="@+id/edit_kid_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/primaryColor"
            android:contentDescription="@string/add_image"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_kid_first_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/first_name"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_kid_image"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_kid_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.kidLiveData.firstname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_kid_last_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/last_name"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_kid_image"
            app:layout_constraintTop_toBottomOf="@id/edit_kid_first_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_kid_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.kidLiveData.lastname}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/imageLastNameBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="edit_kid_image,edit_kid_last_name_layout"
            tools:layout_editor_absoluteX="384dp"
            tools:layout_editor_absoluteY="640dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_kid_birthdate_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/label_dob"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLastNameBarrier">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_kid_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:text="@{viewModel.kidLiveData.birthday}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_kid_balance_header"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintTop_toBottomOf="@id/edit_kid_birthdate_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_kid_spending_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/label_spending_balance"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_kid_balance_header">

            <net.bradball.allowance.util.currencyEditText.CurrencyEditText
                android:id="@+id/edit_kid_spending_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.kidLiveData.spendingBalance}"
                app:allow_negative_values="false"
                app:decimal_digits="2" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
